--- a/public/style/style.css
+++ b/public/style/style.css
@@ -81,7 +81,7 @@ button.purple, input[type=submit].purple {
 
 header {
   padding: 0.6em;
-  text-align: center;
+  text-align: left;
   font-size: 1.2em;
   color: white;
   background-color: #00bcd4;
@@ -93,6 +93,10 @@ header {
   header #score {
     font-size: 1.5em;
     font-weight: bold; }
+  header #title {
+    display: block;
+    font-size: 1.5em;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.75); }
 
 #gameBoard {
   margin-left: auto;
